--- a/Back-link/css/style.css
+++ b/Back-link/css/style.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+    font-family: 'Migra-Extrabold';
+    /* Nome da fonte que você vai usar */
+    src: url('/fonts/Migra-Extrabold.woff2') format('woff2'),
+        /* Caminho para o arquivo da fonte */
+        url('/fonts/Migra-Extrabold.woff') format('woff');
+    /* Fonte secundária */
+    font-weight: normal;
+    /* Peso da fonte (normal, bold, etc.) */
+    font-style: normal;
+    /* Estilo da fonte (normal, italic, etc.) */
+}
 
 :root {
     --bg-fundo-1: #53583E;
@@ -62,7 +74,8 @@ header img {
 }
 
 header h1 {
-    font-size: 1.3em;
+    font-family: 'Migra-Extrabold';
+    font-size: 2.2em;
     margin-bottom: 10px;
     color: var(--text-color-4);
     font-weight: 600;
@@ -119,14 +132,14 @@ a.link .box-email:hover {
 
 footer {
     position: absolute;
-    bottom: -2%;
-    text-align: center;
+    bottom: 3%;
     margin: 0 auto;
-    color: var(--text-color-1);
 }
 
 footer p {
-    width: 95%;
+    width: 98%;
     font-size: .8rem;
+    text-align: center;
+    color: var(--text-color-1);
 }
 
